@startuml

title __PERSONAL's Class Diagram__\n

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.MyCommentAdapter {
          - context : Context
          - data : List<Comment>
          - resource : int
          + MyCommentAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.MyCommentDetail {
          - cancel : Button
          - comments : List<Comment>
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.MyPostAdapter {
          - context : Context
          - data : List<Post>
          - resource : int
          + MyPostAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.MyPostDetail {
          - cancel : Button
          - delete_myPost : Button
          - post_content : TextView
          - post_createTime : TextView
          - post_title : TextView
          - recent_update_time : TextView
          - show_comment : ImageButton
          - update_myPost : Button
          + deleteMyPost()
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.MyPostShow {
          - cancel : Button
          - posts : List<Post>
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.PersonalFragment {
          - UpdatePassword : Button
          - my_comment : Button
          - my_post : Button
          - root : View
          - update : Button
          - user_content_show : TextView
          - user_icon : ImageView
          - user_name_show : TextView
          + onCreateView()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.UpdateMyPost {
          - cancel : Button
          - content : EditText
          - title : EditText
          - updatePost : Button
          {static} + getNowTime()
          + updatePost()
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.UpdatePersonDetail {
          - SureUpdate : Button
          - cancel : Button
          - choose : Button
          - content : TextView
          - image : Integer
          - update_user_icon : ImageView
          - username : TextView
          + updateUserBaseMessage()
          # onActivityResult()
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.personal {
      class com.example.bbs.ui.personal.UpdatePersonPassword {
          - UpdatePassword : Button
          - cancel : Button
          - password : TextView
          - password1 : TextView
          - password2 : TextView
          + updatePassword()
          # onCreate()
          ~ init()
      }
    }
  }
  

  com.example.bbs.ui.personal.MyCommentAdapter -up-|> android.widget.BaseAdapter
  com.example.bbs.ui.personal.MyCommentDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.MyCommentDetail o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.MyPostAdapter -up-|> android.widget.BaseAdapter
  com.example.bbs.ui.personal.MyPostDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.MyPostDetail o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.MyPostShow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.MyPostShow o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.PersonalFragment -up-|> androidx.fragment.app.Fragment
  com.example.bbs.ui.personal.PersonalFragment o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.UpdateMyPost -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.UpdateMyPost o-- com.example.bbs.ui.home.Post : post
  com.example.bbs.ui.personal.UpdateMyPost o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.UpdatePersonDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.UpdatePersonDetail o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.personal.UpdatePersonPassword -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.personal.UpdatePersonPassword o-- com.example.bbs.ui.login.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
